# BookFinder

./: requirements.txt
backend/: main.py
backend/app/: api.py
site/: package-lock.json  pyproject.toml
site/backend/: main.py
site/backend/app/: api.py
