[project]
name = "site"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Hugo José Sales da Silva",email = "vh9325862@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
